pymvpa2 (2.6.4-1) unstable; urgency=medium

  * Fresh upstream bugfix release

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 29 Jan 2018 15:15:50 -0500

pymvpa2 (2.6.3-1) unstable; urgency=medium

  * Fresh bugfix release -- primarily just tests

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 03 Nov 2017 00:47:56 -0400

pymvpa2 (2.6.2-1) unstable; urgency=medium

  * Fresh upstream bugfix release
    - dropping all debian/patches/00* picked up from upstream

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 01 Nov 2017 00:06:43 -0400

pymvpa2 (2.6.1-2) unstable; urgency=medium

  * Upload to unstable
  * debian/patches/00* 
    - addressing for changes in sphinx
    - addressing for more strict numpy 1.13.1
  * debian/control
    - boosted policy to 4.0.0
    - boosted compat/debhelper to 9
    - added dh-python to build-depends

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 17 Oct 2017 22:53:34 -0400

pymvpa2 (2.6.1-1) experimental; urgency=medium

  * Fresh upstream (primarily minor bugfix) release
    - python-mock into build-depends
  * debian/rules
    - invoke tests via  python -m nose  since otherwise lead to some
      weird infinite recursions etc

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 20 Apr 2017 11:24:40 -0400

pymvpa2 (2.6.0-1) unstable; urgency=medium

  * Fresh upstream release
    - variety of bugfixes, e.g. compatibility with scipy 0.17.1, nibabel 2.1
  * debian/control
    - policy boost to 3.9.8

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 26 Aug 2016 20:21:05 -0400

pymvpa2 (2.5.0-2) unstable; urgency=medium

  * debian/control
    - swap order of swig2.0 and swig in build-depends to please buildds
      (Closes: #830394)

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 08 Jul 2016 09:33:17 -0400

pymvpa2 (2.5.0-1) unstable; urgency=medium

  * Fresh upstream feature release

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 11 May 2016 16:55:18 -0400
